# istek

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.vue  dist  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
assets/css/: main.css
components/: CodeEditor.vue  CommitModal.vue  CreateWorkspaceModal.vue  EnvironmentSelector.vue  EvaluationDialog.vue  FileTreeItem.vue  FolderSettingsDialog.vue  GitHistoryModal.vue  GitStatusBar.vue  LicenseSettings.vue  MasterKeySetupDialog.vue  MethodBadge.vue  MockServer.vue  NotificationBell.vue  PlaygroundIndicator.vue  ProtocolBadge.vue  ProtocolSelector.vue  RequestPanel.vue  RequestTabs.vue  ResponsePanel.vue  SearchModal.vue  Sidebar.vue  SyncScreen.vue  TestRunner.vue  UpdateNotification.vue  VariableManager.vue  WorkspaceSelector.vue  WorkspaceSettingsModal.vue
components/panels/: GraphQLPanel.vue  GrpcPanel.vue  McpPanel.vue  MockPanel.vue  MqttPanel.vue  SsePanel.vue  TestPanel.vue  UnixSocketPanel.vue  WebSocketPanel.vue
components/ui/: Badge.vue  Button.vue  HeaderKeyInput.vue  HeaderValueInput.vue  Input.vue  ScrollArea.vue  Select.vue  Tabs.vue  TabsContent.vue  TabsList.vue  TabsTrigger.vue  VariableInput.vue
composables/: useAppStore.ts  useClickOutside.ts  useLicenseStore.ts  useSyncStore.ts  useVariableStore.ts  useWorkspaceEncryption.ts  useWorkspaceStore.ts
lib/: utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: playground.proto
src-tauri/src/: api_server.rs  database.rs  fake_data.rs  git_export.rs  graphql.rs  grpc_client.rs  http.rs  import.rs  lib.rs  license.rs  main.rs  mcp.rs  mock_server.rs  mqtt.rs  scripting.rs  secret_providers.rs  sse.rs  storage.rs  storage_commands.rs  sync.rs  template_functions.rs  test_runner.rs  unix_socket.rs  update_checker.rs  websocket.rs
src-tauri/src/api/: collections.rs  environments.rs  health.rs  history.rs  integrations.rs  mod.rs  tests.rs  variables.rs  workspaces.rs
src-tauri/src/playground/: data.rs  graphql.rs  grpc_server.rs  http_server.rs  mod.rs  mqtt_broker.rs  unix_socket_server.rs
types/: index.ts
