[package]
name = "istek"
version = "1.0.0"
description = "AI-native, multi-protocol API client with MCP integration for Claude, GPT, and other AI agents"
authors = ["Istek Team"]
license = "MIT"
repository = "https://github.com/istekapp/istek"
homepage = "https://istek.app"
edition = "2021"
rust-version = "1.83"

[lib]
name = "istek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
tonic-build = "0.12"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
mime_guess = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# MQTT
rumqttc = "0.24"

# HTTP over Unix Socket and Mock Server
hyper = { version = "1.4", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "server", "http1", "http2", "tokio"] }
http-body-util = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# For managing connections
once_cell = "1.19"
dashmap = "6.0"
base64 = "0.22"

# MCP (Model Context Protocol)
async-process = "2.3"
tauri-plugin-shell = "2"
dirs = "5.0"

# Mock Server
axum = { version = "0.7", features = ["http1", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
regex = "1.10"
url = "2.5"

# Secret Providers (AWS, GCP, Azure) & Template Functions
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
signature = "2.2"

# AWS SDK
aws-config = "1.5"
aws-sdk-sts = "1.50"
aws-sdk-secretsmanager = "1.55"
aws-credential-types = "1.2"

# AES-GCM encryption for sensitive values
aes-gcm = "0.10"

# Bitwarden decryption (AES-CBC + HKDF)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hkdf = "0.12"

# JSONPath for test assertions
jsonpath-rust = "0.7"

# Random data generation for mock responses
rand = "0.9"

# Playground server
async-graphql = "7.0"
tonic-reflection = "0.12"
async-stream = "0.3"
tokio-stream = "0.1"

# JavaScript runtime for pre/post request scripts
rquickjs = { version = "0.8", features = ["bindgen", "classes", "futures", "macro"] }

# YAML for Git export
serde_yaml = "0.9"

# File dialog and filesystem for export/import
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Git sync
git2 = { version = "0.19", features = ["vendored-openssl"] }
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# API Server - OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# System Keychain for encrypt() function - platform-specific features
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

# Unix Socket - only on Unix-like systems (not Windows)
[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9"
